feat: Kafka 이벤트 클래스 직렬화 애노테이션 추가
Kafka JSON 직렬화/역직렬화를 위한 Lombok 애노테이션 추가
- @Builder: 빌더 패턴 지원
- @NoArgsConstructor: 기본 생성자 (역직렬화 필수)
- @AllArgsConstructor: 전체 필드 생성자
- final 키워드 제거 (NoArgsConstructor와 호환)

변경된 이벤트 클래스:
- OrderCreatedEvent
- StockReservedEvent, StockFailedEvent
- CouponUsedEvent, CouponFailedEvent
- ProcessPaymentEvent
- OrderCompletedEvent
- CompensateStockCommand, CompensateCouponCommand
- SendOrderDataEvent
- CouponIssueMessage

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>